<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="150dp"
        android:layout_height="210dp"
        app:cardCornerRadius="20dp">
        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/image_1"
            android:scaleType="centerCrop"
            android:contentDescription="@string/todo" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/image"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:textColor="@color/gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/belt_suit_blazer"/>

    <TextView
        android:id="@+id/dollar"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="7dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dollar"/>

    <TextView
        android:id="@+id/price"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintLeft_toRightOf="@+id/dollar"
        android:layout_marginTop="7dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_100"/>


</androidx.constraintlayout.widget.ConstraintLayout>