<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <HorizontalScrollView
        android:id="@+id/filter"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="60dp">

        <RadioGroup
            android:id="@+id/filterRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp">

            <RadioButton
                android:id="@+id/all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/checked_button"
                android:button="@drawable/radio_btn_style"
                android:text="@string/all"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/party"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/unchecked_button"
                android:button="@drawable/radio_btn_style"
                android:drawableStart="@drawable/ic_party"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/party"
                android:textAlignment="center"
                android:textColor="@color/gray" />

            <RadioButton
                android:id="@+id/camping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/unchecked_button"
                android:button="@drawable/radio_btn_style"
                android:drawableStart="@drawable/ic_camping"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/camping"
                android:textAlignment="center"
                android:textColor="@color/gray" />


            <RadioButton
                android:id="@+id/category1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/unchecked_button"
                android:button="@drawable/radio_btn_style"
                android:drawableStart="@drawable/ic_party"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/category1"
                android:textAlignment="center"
                android:textColor="@color/gray" />

            <RadioButton
                android:id="@+id/category2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/unchecked_button"
                android:button="@drawable/radio_btn_style"
                android:drawableStart="@drawable/ic_party"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/category2"
                android:textAlignment="center"
                android:textColor="@color/gray" />

            <RadioButton
                android:id="@+id/category3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/unchecked_button"
                android:button="@drawable/radio_btn_style"
                android:drawableStart="@drawable/ic_party"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/category3"
                android:textAlignment="center"
                android:textColor="@color/gray" />
        </RadioGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="10dp"
        android:clipToPadding="false"/>

</androidx.appcompat.widget.LinearLayoutCompat>


